squareline_folder/compile_dbg.txt
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino: In function 'void setup()':
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino:259:35: error: 'RED' was not declared in this scope; did you mean 'RER'?
  259 |     gfx->fillRect(0, 0, 160, 160, RED);
      |                                   ^~
      |                                   RER
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino:260:37: error: 'GREEN' was not declared in this scope
  260 |     gfx->fillRect(160, 0, 160, 160, GREEN);
      |                                     ^~~
/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino:261:37: error: 'BLUE' was not declared in this scope
  261 |     gfx->fillRect(320, 0, 160, 160, BLUE);
      |                                     ^~/Users/umeshgopi/finalhope/test_repo_esp/driving_eyes/driving_eyes.ino:262:37: error: 'WHITE' was not declared in this scope; did you mean 'FWRITE'?
  262 |     gfx->fillRect(0, 160, 480, 160, WHITE);
      |                                     ^~~
      |                                     FWRITE

[92mUsed library[0m            [92mVersion[0m [90mPath[0m
[93mSPIFFS[0m                  3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/SPIFFS[0m
[93mFS[0m                      3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/FS[0m
[93mJPEGDEC[0m                 1.8.4   [90m/Users/umeshgopi/Arduino/libraries/JPEGDEC[0m
[93mGFX Library for Arduino[0m 1.6.5   [90m/Users/umeshgopi/Arduino/libraries/GFX_Library_for_Arduino[0m
[93mSPI[0m                     3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/SPI[0m
[93mWire[0m                    3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7/libraries/Wire[0m
[93mTCA9554[0m                 0.1.3   [90m/Users/umeshgopi/Arduino/libraries/TCA9554[0m

[92mUsed platform[0m [92mVersion[0m [90mPath[0m
[93mesp32:esp32[0m   3.3.7   [90m/Users/umeshgopi/Library/Arduino15/packages/esp32/hardware/esp32/3.3.7[0m
Error during build: exit status 1
